Refactored ArtistsInTopTenWithTopTenTracksByCountryBenchmark